--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.8.6",
         "@mui/styled-engine-sc": "^5.8.0",
+        "react-icons": "^4.4.0",
+        "react-slick": "^0.29.0",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.5"
     }
 }
